# Minimalistic-VM

./: CMakeLists.txt  instructions.h  main.c  stack.h  test.vm
headers/: instructions.h  object.h  object_maths.h  stack.h  state.h  utils.h
source/: instructions.c  object_maths.c  stack.c  state.c
tests/: CMakeLists.txt  instructions_check.c  unit_framework.h
